--- a/src/Pivot/Pivot.html
+++ b/src/Pivot/Pivot.html
@@ -2,6 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <body>
         <div id="root"></div>
-        <script type="text/javascript" src="work-hub-group.js" charset="utf-8"></script>
+        <script type="text/javascript" src="Pivot.js" charset="utf-8"></script>
     </body>
 </html>
